tests/data/bad/bad_init.py
from __future__ import annotations

from rizhiy_cfg import CN

cfg = CN("Bad")
